--- a/Week7/Todo.css
+++ b/Week7/Todo.css
@@ -21,3 +21,18 @@
     margin-left: auto;
     margin-right: auto;
 }
+
+#favorites{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+#draw{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+#card-container{
+    display: flex;
+    flex-wrap: wrap;
+}
